bk_ida/gccida/c0/reload_reg_free_for_value_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/reload1.c:5230:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/reload1.c:5354:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/reload1.c:5355:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v19 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)reg)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/reload_reg_free_for_value_p/src/obj/reload1.o] Error 1
